--- a/HashSalt.Lib/HashSalt.Lib.csproj
+++ b/HashSalt.Lib/HashSalt.Lib.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+<PackageId>HashSalter</PackageId>
+<Version>1.0.0</Version>
+<Authors>your_name</Authors>
+<Company>your_company</Company>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,3 +14,4 @@
   </ItemGroup>
 
 </Project>
+
